fixed the scroll of the task manager on mobile safari

--- a/scss/components/login/preLoginContent.scss
+++ b/scss/components/login/preLoginContent.scss
@@ -588,7 +588,7 @@
       }
 
       p:last-child {
-        font-size: 12px;
+        font-size: 16px;
         line-height: 20px; /* 125% */
       }
     }
